tests/analyzer/errors/dot_type_on_non_mod.rv
struct Vec2 {
    x: int, y: int,

    fn new(x: int, y: int) -> Self {
        return Self { x, y }
    }
}

fn main() {
    var v = Vec2.new(12, 99)

    fn invalid(a: v.x) {}
}
